@@ -15,9 +15,15 @@
 	* almost completely changed the storage interface (for custom storage)
 	* added support for hashing pieces in multiple threads
 
+	* uTP path MTU discovery improvements
+	* optimized the torrent creator optimizer to scale significantly better with more files
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* fix crash when creating torrents and optimizing file order with pad files
+	* disable support for large MTUs in uTP until it is more reliable
+	* expose post_torrent_updates and state_update_alert to python bindings
+	* fix incorrect SSL error messages
 	* fix windows build of shared library with openssl
 	* fix race condition causing shutdown hang
 
